--- a/PetShop.Infastructure.Static.Data/PetShop.Infastructure.Static.Data.csproj
+++ b/PetShop.Infastructure.Static.Data/PetShop.Infastructure.Static.Data.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PetShop.Core.Entity\PetShop.Core.Entity.csproj" />
+    <ProjectReference Include="..\PetShop.Core\PetShop.Core.csproj" />
+  </ItemGroup>
 
 </Project>
